--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"सुरक्षाको स्थिति"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"स्क्रिन लक, Find My Device, एपको सुरक्षा"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"सुरक्षा तथा गोपनीयता"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"अनुमति, स्क्रिन लक, एपसम्बन्धी सुरक्षा"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"अनुहार थपियो"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"फेस अनलक सेटअप गर्न ट्याप गर्नुहोस्"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"फेस अनलक"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" स्क्रिन लकको विकल्प असक्षम पारिएको छ। थप जान्नलाई आफ्नो सङ्गठनको प्रशासकलाई सम्पर्क गर्नुहोस्। "<annotation id="admin_details">"थप विवरणहरू"</annotation>\n\n"तपाईं खरिदहरूलाई अधिकार दिन र एपमाथि पहुँच पाउनका लागि आफ्नो फिंगरप्रिन्ट समेत प्रयोग गर्न सक्नुहुन्छ। "<annotation id="url">"थप जान्नुहोस्"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"औँला उठाएर फेरि सेंसर छुनुहोस्"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"फिंगरप्रिन्ट सेन्सर प्रयोग गर्न मिल्दैन। फिंगरप्रिन्ट सेन्सर मर्मत गर्ने सेवा प्रदायक कम्पनीमा सम्पर्क गर्नुहोस्"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"उन्नत सेटिङ"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"कार्य प्रोफाइलको लक, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock र थप सुविधा"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"उन्नत सेटिङ"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"तपाईं <xliff:g id="COUNT">%d</xliff:g> सम्म फिंगरप्रिन्टहरू थप्न सक्नुहुन्छ"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"तपाईंले अधिकतम संख्यामा फिंगरप्रिन्टहरू थप्नुभएको छ"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"थप फिंगरप्रिन्टहरू थप्न सकिँदैन"</string>
@@ -2431,11 +2436,11 @@
     <string name="accessibility_control_timeout_preference_summary" msgid="4037051091059316310">"सबै एपहरूमा समयावधिसम्बन्धी यो प्राथमिकता लागू गर्न मिल्दैन"</string>
     <string name="accessibility_control_timeout_preference_intro_text" msgid="1398116710556762245">"तपाईंलाई कारबाही गर्न अनुरोध गरिने अस्थायी म्यासेजहरू कति समयसम्म देखाउने भन्ने कुरा छनौट गर्नुहोस्"</string>
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"टच एण्ड होल्डको ढिलाइ"</string>
-    <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"रङ्ग उल्टाउने सुविधा"</string>
-    <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"रङ्ग उल्टाउने सुविधा प्रयोग गरियोस्"</string>
+    <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"कलर इन्भर्सन"</string>
+    <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"कलर इन्भर्सन प्रयोग गरियोस्"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"कलर इन्भर्सनको सर्टकट"</string>
     <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"कलर इन्भर्सनले उज्यालो स्क्रिन बदलेर अँध्यारो बनाउँछ। यसले अँध्यारो स्क्रिन बदलेर उज्यालो पनि बनाउँछ।"</string>
-    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;ख्याल गर्नुहोस्&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; मिडिया र फोटोहरूमा रङ बदलिने छ&lt;/li&gt; &lt;li&gt; कलर इन्भर्सनले सबै एपहरूमा काम गर्छ&lt;/li&gt; &lt;li&gt; अँध्यारो ब्याकग्राउन्ड डिस्प्ले गर्नका लागि यसको साटो अँध्यारो थिम प्रयोग गर्न सकिन्छ&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;ख्याल गर्नुहोस्&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; मिडिया र फोटोहरूमा रङ बदलिने छ&lt;/li&gt; &lt;li&gt; कलर इन्भर्सनले सबै एपहरूमा काम गर्छ&lt;/li&gt; &lt;li&gt; अँध्यारो ब्याकग्राउन्ड डिस्प्ले गर्न यसको साटो अँध्यारो थिम प्रयोग गर्न सकिन्छ&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"अटोक्लिक (ड्वेल टाइमिङ)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"अटोक्लिक (कर्सर रहने समय) का बारेमा"</string>
     <string name="accessibility_autoclick_footer_learn_more_content_description" msgid="7056189627042350691">"अटोक्लिक (कर्सर रहने समय) का बारेमा थप जान्नुहोस्"</string>
@@ -5693,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"लोकेसन प्रयोग गर्ने अनुमति"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"एप र सेवाहरूका लागि"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"एप र सेवाहरूका लागि। यो सेटिङ अफ गरिएको अवस्थामा तपाईंले आपत्‍कालीन नम्बरमा कल गर्नुभयो भने माइक्रोफोनसम्बन्धी डेटा अझै पनि सेयर गरिन सक्छ।"</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"गेमका सेटिङ"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"गेम ड्यासबोर्डको सर्टकटलगायतका सुविधा अन गर्नुहोस्"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"अघिल्लो"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"अर्को"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"रङको प्रिभ्यू"</string>
