--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"பாதுகாப்பு நிலை"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"திரைப் பூட்டு, Find My Device, ஆப்ஸ் பாதுகாப்பு"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"பாதுகாப்பு &amp; தனியுரிமை"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"அனுமதிகள், திரைப் பூட்டு, ஆப்ஸ் பாதுகாப்பு"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"முகம் சேர்க்கப்பட்டது"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"முகத்தை அமைக்கத் தட்டவும்"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"முகம் காட்டித் திறத்தல்"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" திரைப் பூட்டு விருப்பம் முடக்கப்பட்டது. மேலும் அறிய, உங்கள் நிறுவனத்தின் நிர்வாகியைத் தொடர்புகொள்ளவும். "<annotation id="admin_details">"மேலும் விவரங்கள்"</annotation>\n\n"வாங்குவதை அங்கீகரிக்கவும் ஆப்ஸை அணுகவும் தொடர்ந்து நீங்கள் கைரேகையைப் பயன்படுத்தலாம். "<annotation id="url">"மேலும் அறிக"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"விரலை எடுத்துவிட்டு, மீண்டும் சென்சாரைத் தொடவும்"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"கைரேகை சென்சாரைப் பயன்படுத்த முடியவில்லை. பழுதுபார்ப்புச் சேவை வழங்குநரைத் தொடர்புகொள்ளவும்"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"மேம்பட்ட அமைப்புகள்"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"பணிக் கணக்குப் பூட்டு, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock மற்றும் பல"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"மேம்பட்ட அமைப்புகள்"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"<xliff:g id="COUNT">%d</xliff:g> கைரேகைகள் வரை சேர்க்கலாம்"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"அனுமதிக்கப்படும் அதிகபட்சக் கைரேகைகளைச் சேர்த்துவிட்டீர்கள்"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"மேலும் கைரேகைகளைச் சேர்க்க முடியவில்லை"</string>
@@ -2336,7 +2341,7 @@
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"அமைப்புகளை ரீசெட் செய்தல்"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"காட்சியின் அளவையும் வார்த்தைகளுக்கான விருப்பத்தேர்வுகளையும் ரீசெட் செய்யவா?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"உங்கள் காட்சியின் அளவும் வார்த்தைகளுக்கான விருப்பத்தேர்வுகளும் மொபைலின் அசல் அமைப்புகளுக்கு ரீசெட் செய்யப்படும்"</string>
-    <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"ரீசெட் செய்தல்"</string>
+    <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"ரீசெட் செய்"</string>
     <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"வாரயிறுதி நாட்களில் ஏதேனும் திட்டங்கள் உள்ளதா?"</string>
     <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"கடற்கரைக்குச் செல்கிறோம். நீங்களும் வருகிறீர்களா?"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"விருப்பங்கள்"</string>
@@ -5693,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"இருப்பிட அணுகல்"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"ஆப்ஸுக்கும் சேவைகளுக்கும்"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"ஆப்ஸ் &amp; சேவைகளுக்கு. இந்த அமைப்பு முடக்கப்பட்டிருந்தால் அவசர உதவி எண்ணைத் தொடர்பு கொள்ளும்போது மைக்ரோஃபோன் தரவு பகிரப்படலாம்."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"கேம் அமைப்புகள்"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"கேம் டாஷ்போர்டு ஷார்ட்கட்டையும் மேலும் பலவற்றையும் இயக்கும்"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"முந்தையது"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"அடுத்து"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"வண்ண மாதிரிக்காட்சி"</string>
