--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"የደህንነት ሁኔታ"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"የማያ ገጽ መቆለፊያ፣ የእኔን መሣሪያ አግኝ፣ የመተግበሪያ ደኅንነት"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"ደህንነት እና ግላዊነት"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"ፈቃዶች፣ የማያ ገጽ መቆለፊያ፣ የመተግበሪያ ደህንነት"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"መልክ ታክሏል"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"መልክን ለማዋቀር መታ ያድርጉ"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"በመልክ መክፈት"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" የማያ ገጽ ቁልፍ አማራጩ ተሰናክሏል። ተጨማሪ ለማወቅ የድርጅትዎን አስተዳዳሪ ያነጋግሩ። "<annotation id="admin_details">"ተጨማሪ ዝርዝሮች"</annotation>\n\n"ለግዢዎች እና የመተግበሪያ መዳረሻ ፈቃድ ለመስጠት አሁንም የጣት አሻራዎን መጠቀም ይችላሉ። "<annotation id="url">"የበለጠ ለመረዳት"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"ጣትዎን ያንሱ፣ ከዚያ በድጋሚ ዳሳሽ ይንኩ"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"የጣት አሻራ ዳሳሽን መጠቀም አይቻልም። የጥገና አገልግሎት ሰጪን ይጎብኙ"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"የላቁ ቅንብሮች"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"የሥራ መገለጫ መቆለፊያ፣ Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock እና ተጨማሪ"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"የላቁ ቅንብሮች"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"እስከ <xliff:g id="COUNT">%d</xliff:g> የሚደርሱ የጣት አሻራዎችን ማከል ይችላሉ"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"የሚፈቀደውን ከፍተኛ የጣት አሻራ ብዛት አክለዋል"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"ተጨማሪ የጣት አሻራዎችን ማከል አይቻልም"</string>
@@ -5693,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"የአካባቢ መዳረሻ"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"ለመተግበሪያዎች እና አገልግሎቶች"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"ለመተግበሪያዎች እና አገልግሎቶች። ይህ ቅንብር ከጠፋ እርስዎ ወደ አንድ የአደጋ ጊዜ ቁጥር ሲደውሉ የማይክሮፎን ውሂብ አሁንም ሊጋራ ይችላል።"</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"የጨዋታ ቅንብሮች"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"የጨዋታ ዳሽቦርድ አቋራጩን ያብሩ እና ተጨማሪ ነገሮችን ያድርጉ"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"ቀዳሚ"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"ቀጣይ"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"የቀለም ቅድመ-እይታ"</string>
