--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Κατάσταση ασφάλειας"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Κλείδωμα οθόνης, Εύρεση συσκευής, ασφάλεια εφαρμογής"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Ασφάλεια και απόρρητο"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Άδειες, κλείδωμα οθόνης, ασφάλεια εφαρμογών"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Προστέθηκε πρόσωπο"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Πατήστε για ρύθμιση προσώπου"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Ξεκλείδωμα με το πρόσωπο"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Η επιλογή κλειδώματος οθόνης είναι απενεργοποιημένη. Για να μάθετε περισσότερα, επικοινωνήστε με τον διαχειριστή της εφαρμογής σας. "<annotation id="admin_details">"Περισσότερες λεπτομέρειες"</annotation>\n\n"Μπορείτε να εξακολουθήσετε να χρησιμοποιείτε το δακτυλικό αποτύπωμα για την εξουσιοδότηση αγορών και την πρόσβαση εφαρμογών. "<annotation id="url">"Μάθετε περισσότερα"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Σηκώστε το δάχτυλο και, στη συνέχεια, αγγίξτε ξανά τον αισθητήρα"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Δεν είναι δυνατή η χρήση του αισθητήρα δακτ. αποτυπωμ. Επισκεφτείτε έναν πάροχο υπηρεσιών επισκευής."</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Σύνθετες ρυθμίσεις"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Κλείδωμα προφίλ εργασίας, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock και άλλα"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Σύνθετες ρυθμίσεις"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Μπορείτε να προσθέσετε έως <xliff:g id="COUNT">%d</xliff:g> μοναδικά χαρακτηριστικά"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Έχετε προσθέσει τον μέγιστο αριθμό δακτυλικών αποτυπωμάτων"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Δεν είναι δυνατή η προσθήκη περισσότερων δακτυλικών αποτυπωμάτων"</string>
@@ -5693,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Πρόσβαση στην τοποθεσία"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Για εφαρμογές και υπηρεσίες"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Για εφαρμογές και υπηρεσίες. Εάν είναι απενεργοποιημένη αυτή η ρύθμιση, τα δεδομένα μικροφώνου ενδέχεται να κοινοποιούνται όταν καλείτε έναν αριθμό έκτακτης ανάγκης."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Ρυθμίσεις παιχνιδιών"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Ενεργοποίηση συντόμευσης Πίνακα ελέγχου παιχνιδιού και άλλα"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Προηγούμενο"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Επόμενο"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Προεπισκόπηση χρώματος"</string>
