--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Status keamanan"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Kunci layar, Temukan Perangkat Saya, keamanan aplikasi"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Keamanan &amp; privasi"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Izin, kunci layar, keamanan aplikasi"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Wajah ditambahkan"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Ketuk untuk menyiapkan wajah"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Face Unlock"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Opsi layar kunci dinonaktifkan. Untuk mempelajari lebih lanjut, hubungi admin organisasi Anda. "<annotation id="admin_details">"Detail selengkapnya"</annotation>\n\n"Anda tetap dapat menggunakan sidik jari untuk mengotorisasi pembelian dan akses aplikasi. "<annotation id="url">"Pelajari lebih lanjut"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Angkat jari, lalu sentuh sensor lagi"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Tidak dapat menggunakan sensor sidik jari. Kunjungi penyedia reparasi"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Setelan lanjutan"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Kunci profil kerja, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock dan lainnya"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Setelan lanjutan"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Anda dapat menambahkan maksimal <xliff:g id="COUNT">%d</xliff:g> sidik jari"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Anda telah menambahkan jumlah maksimum sidik jari"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Tidak dapat menambahkan sidik jari lagi"</string>
@@ -2299,7 +2304,7 @@
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"Preferensi teks"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"Tentang preferensi teks"</string>
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"Pelajari preferensi teks lebih lanjut"</string>
-    <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"pembesaran"</string>
+    <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"Pembesaran"</string>
     <string name="accessibility_screen_magnification_shortcut_title" msgid="2387963646377987780">"Pintasan pembesaran"</string>
     <string name="accessibility_screen_magnification_follow_typing_title" msgid="6379517513916651560">"Perbesar saat mengetik"</string>
     <string name="accessibility_screen_magnification_follow_typing_summary" msgid="2882250257391761678">"Kaca pembesar mengikuti teks saat Anda mengetik"</string>
@@ -2431,7 +2436,7 @@
     <string name="accessibility_control_timeout_preference_summary" msgid="4037051091059316310">"Preferensi pengaturan waktu ini didukung di aplikasi tertentu"</string>
     <string name="accessibility_control_timeout_preference_intro_text" msgid="1398116710556762245">"Pilih durasi tampilan pesan sementara yang meminta Anda melakukan tindakan"</string>
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"Jeda sentuh lama"</string>
-    <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"inversi warna"</string>
+    <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"Inversi warna"</string>
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"Gunakan inversi warna"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"Pintasan inversi warna"</string>
     <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"Inversi warna mengubah layar terang menjadi gelap. Fitur ini juga mengubah layar gelap menjadi terang."</string>
@@ -2530,7 +2535,7 @@
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"Lemah hijau, deuteranomali"</string>
     <string name="daltonizer_mode_protanomaly_summary" msgid="4617032854982040748">"Lemah merah, protanomali"</string>
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2428218320118180070">"Tritanomali"</string>
-    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"ekstra redup"</string>
+    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Ekstra redup"</string>
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Buat layar ekstra redup"</string>
     <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"Pintasan ekstra redup"</string>
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"Tentang ekstra redup"</string>
@@ -5693,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Akses lokasi"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Untuk aplikasi dan layanan"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Untuk aplikasi dan layanan. Jika setelan ini nonaktif, data mikrofon mungkin tetap dibagikan saat Anda menelepon nomor darurat."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Setelan game"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Aktifkan pintasan Dasbor Game, dan lainnya"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Sebelumnya"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Berikutnya"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Pratinjau warna"</string>
