--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -348,7 +348,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"סטטוס אבטחה"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"נעילת מסך, איפה המכשיר שלי, אבטחת אפליקציות"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"אבטחה ופרטיות"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"הרשאות, נעילת מסך, אבטחת אפליקציות"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"הפנים נוספו"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"יש להקיש כדי להגדיר זיהוי פנים"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"פתיחה ע\"י זיהוי הפנים"</string>
@@ -596,10 +597,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" אפשרות נעילת המסך מושבתת. למידע נוסף ניתן לפנות למנהל המכשיר בארגון. "<annotation id="admin_details">"למידע נוסף"</annotation>\n\n"עדיין ניתן להשתמש בטביעת האצבע שלך כדי לאשר רכישות ולגשת לאפליקציות. "<annotation id="url">"למידע נוסף"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"יש להרים את האצבע ולגעת שוב בחיישן"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"לא ניתן להשתמש בחיישן טביעות האצבע. צריך ליצור קשר עם ספק תיקונים"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"הגדרות מתקדמות"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"‏נעילה של פרופיל העבודה, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"‏Smart Lock ועוד"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"הגדרות מתקדמות"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"אפשר להוסיף עד <xliff:g id="COUNT">%d</xliff:g> טביעות אצבע"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"הוספת את המספר המרבי של טביעות אצבע."</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"לא ניתן להוסיף עוד טביעות אצבע"</string>
@@ -1475,7 +1480,7 @@
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"במהלך טעינה או עגינה"</string>
     <string name="screensaver_settings_summary_either_short" msgid="2126139984738506920">"בשני המצבים"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"במהלך טעינה"</string>
-    <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"במהלך עגינה"</string>
+    <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"בזמן עגינה"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"אף פעם"</string>
     <string name="screensaver_settings_summary_off" msgid="8720357504939106923">"כבוי"</string>
     <string name="screensaver_settings_disabled_prompt" msgid="1166343194760238835">"כדי לשלוט במה שקורה כאשר הטלפון בעגינה ו/או במצב שינה, הפעל את שומר המסך."</string>
@@ -1492,7 +1497,7 @@
     <string name="doze_always_on_summary" msgid="509097829739647852">"שימוש מוגבר בסוללה"</string>
     <string name="force_bold_text" msgid="4620929631102086716">"טקסט מודגש"</string>
     <string name="title_font_size" msgid="570613010306330622">"גודל גופן"</string>
-    <string name="short_summary_font_size" msgid="8444689613442419978">"מגדילים או מקטינים את גודל הטקסט"</string>
+    <string name="short_summary_font_size" msgid="8444689613442419978">"הגדלה או הקטנה של גודל הטקסט"</string>
     <string name="sim_lock_settings" msgid="4493069398250139205">"‏הגדרות של נעילת כרטיס SIM"</string>
     <string name="sim_lock_settings_category" msgid="4280307997492851625">"‏נעילת כרטיס SIM"</string>
     <string name="sim_lock_settings_summary_off" msgid="4570941250786847095">"כבוי"</string>
@@ -2456,7 +2461,7 @@
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"שקוף"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"לא שקוף"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"טקסט בניגודיות גבוהה"</string>
-    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"שינוי צבע הטקסט לשחור או לבן. הניגודיות לצבע הרקע תגדל למקסימום."</string>
+    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"שינוי צבע הטקסט לשחור או לבן. ניגודיות מקסימלית לצבע הרקע."</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"עדכון אוטומטי של הגדלת מסך"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"עדכון הגדלת מסך במעבר בין אפליקציות"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"לחצן ההפעלה מסיים שיחה"</string>
@@ -2782,8 +2787,8 @@
     <string name="advanced_battery_title" msgid="3005993394776555079">"שימוש בסוללה"</string>
     <string name="history_details_title" msgid="8628584613889559355">"פרטי היסטוריה"</string>
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"שימוש בסוללה"</string>
-    <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"הצגת נתוני השימוש ב-24 השעות האחרונות"</string>
-    <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"הצגת השימוש מאז הטעינה המלאה האחרונה"</string>
+    <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"נתוני השימוש ב-24 השעות האחרונות"</string>
+    <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"השימוש מאז הטעינה המלאה האחרונה"</string>
     <string name="battery_details_title" msgid="4531369291819754178">"שימוש בסוללה"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"פרטי שימוש"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"התאמת צריכת סוללה"</string>
@@ -2802,7 +2807,7 @@
     <string name="battery_saver_link_a11y" msgid="740558184830458845">"למידע נוסף על תכונת החיסכון בסוללה"</string>
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"ייתכן שחלק מהתכונות מוגבלות"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"שימוש מוגבר בסוללה"</string>
-    <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"הצגת האפליקציות המובילות במידת השימוש בסוללה"</string>
+    <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"האפליקציות המובילות במידת השימוש בסוללה"</string>
     <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"הטעינה מוגבלת זמנית"</string>
     <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"כדי לשמור על תקינות הסוללה. מידע נוסף."</string>
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"המשך הטעינה"</string>
@@ -3265,7 +3270,7 @@
     <string name="data_usage_menu_split_4g" msgid="3391899816926640583">"‏שימוש נפרד ב-4G"</string>
     <string name="data_usage_menu_show_wifi" msgid="6380926350184939975">"‏הצגת Wi‑Fi"</string>
     <string name="data_usage_menu_hide_wifi" msgid="4694889089278302691">"‏הסתרת Wi‑Fi"</string>
-    <string name="data_usage_menu_show_ethernet" msgid="4401026240876938859">"‏הצגת השימוש ב-Ethernet"</string>
+    <string name="data_usage_menu_show_ethernet" msgid="4401026240876938859">"‏השימוש ב-Ethernet"</string>
     <string name="data_usage_menu_hide_ethernet" msgid="7792365022467586772">"הסתרת שימוש באתרנט"</string>
     <string name="data_usage_menu_metered" msgid="4279260736172851951">"הגבלות רשת"</string>
     <string name="data_usage_menu_auto_sync" msgid="2632694000068175025">"סנכרון אוטומטי של נתונים"</string>
@@ -3696,7 +3701,7 @@
     <string name="keywords_display_cast_screen" msgid="2572331770299149370">"הקרנה, העברה, שיקוף מסך, שיתוף מסך, שיקוף, שיתוף צג, העברת מסך"</string>
     <string name="keywords_storage" msgid="3004667910133021783">"שטח, דיסק, כונן קשיח, שימוש במכשיר"</string>
     <string name="keywords_battery" msgid="7040323668283600530">"צריכת חשמל, טעינה"</string>
-    <string name="keywords_battery_usage" msgid="1763573071014260220">"הצגת השימוש בסוללה, השימוש בסוללה, צריכת החשמל"</string>
+    <string name="keywords_battery_usage" msgid="1763573071014260220">"השימוש בסוללה, השימוש בסוללה, צריכת החשמל"</string>
     <string name="keywords_battery_saver" msgid="6289682844453234359">"חיסכון בסוללה, חיסכון בחשמל, חיסכון"</string>
     <string name="keywords_battery_adaptive_preferences" msgid="1774870663426502938">"העדפות שניתנות להתאמה, סוללה שניתנת להתאמה"</string>
     <string name="keywords_spell_checker" msgid="5148906820603481657">"איות, מילון, בדיקת איות, תיקון אוטומטי"</string>
@@ -4762,7 +4767,7 @@
     <string name="camera_double_tap_power_gesture_title" msgid="8264757967127716261">"לחיצה כפולה על לחצן ההפעלה"</string>
     <string name="camera_double_tap_power_gesture_desc" msgid="1539147023700755155">"הפעלת המצלמה במהירות מבלי לבטל את נעילת הטלפון"</string>
     <string name="screen_zoom_title" msgid="6928045302654960559">"גודל תצוגה"</string>
-    <string name="screen_zoom_short_summary" msgid="756254364808639194">"מגדילים או מקטינים הכול"</string>
+    <string name="screen_zoom_short_summary" msgid="756254364808639194">"הגדלה או הקטנה של כל הפריטים במסך"</string>
     <string name="screen_zoom_keywords" msgid="5964023524422386592">"דחיסות תצוגה, מרחק מתצוגה במסך, קנה מידה, שינוי קנה מידה"</string>
     <string name="screen_zoom_summary" msgid="1362984939045594989">"הגדלה והקטנה של הפריטים המופיעים במסך. ייתכן שהמיקום של חלק מהאפליקציות במסך ישתנה."</string>
     <string name="screen_zoom_preview_title" msgid="5288355628444562735">"תצוגה מקדימה"</string>
@@ -5110,7 +5115,7 @@
     <string name="keywords_one_handed" msgid="969440592493034101">"גישה ביד אחת"</string>
     <string name="one_handed_mode_swipe_down_category" msgid="110178629274462484">"החלקה למטה לצורך"</string>
     <string name="one_handed_mode_use_shortcut_category" msgid="1414714099339147711">"שימוש במקש הקיצור לצורך"</string>
-    <string name="one_handed_mode_intro_text" msgid="7921988617828924342">"כדאי למשוך למטה את החלק העליון של המסך כך שיהיה קל יותר להגיע אליו באמצעות יד אחת"</string>
+    <string name="one_handed_mode_intro_text" msgid="7921988617828924342">"אפשר למשוך למטה את החלק העליון של המסך כך שיהיה קל יותר להגיע אליו באמצעות יד אחת"</string>
     <string name="one_handed_mode_footer_text" msgid="6336209800330679840">" "<b>"איך להשתמש במצב השימוש ביד אחת"</b>\n" • מוודאים שהאפשרות \'ניווט באמצעות תנועות\' נבחרה בהגדרות הניווט של המערכת.\n • מחליקים למטה ליד הקצה התחתון של המסך."</string>
     <string name="one_handed_action_pull_down_screen_title" msgid="9187194533815438150">"הזזת המסך לטווח המגע"</string>
     <string name="one_handed_action_pull_down_screen_summary" msgid="7582432473450036628">"החלק העליון של המסך יזוז לטווח המגע של האגודל שלך."</string>
@@ -5873,8 +5878,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"גישה למיקום"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"לאפליקציות ולשירותים"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"לאפליקציות ולשירותים. אם ההגדרה מושבתת, נתוני המיקרופון ישותפו כשתתבצע שיחה למספר חירום."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"הגדרות משחקים"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"הפעלה של הלחצן המהיר למרכז בקרת המשחקים ועוד"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"הקודם"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"הבא"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"תצוגה מקדימה של הצבע"</string>
