--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"ស្ថានភាព​សុវត្ថិភាព"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"ការចាក់សោ​អេក្រង់ កម្មវិធី​រកឧបករណ៍របស់ខ្ញុំ សុវត្ថិភាព​កម្មវិធី"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"សុវត្ថិភាព និងឯកជនភាព"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"ការអនុញ្ញាត ចាក់សោអេក្រង់ សុវត្ថិភាពកម្មវិធី"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"បាន​បញ្ចូល​មុខ"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"ចុចដើម្បី​រៀបចំ​មុខ"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"ដោះ​សោ​តាម​​ទម្រង់​មុខ"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" ជម្រើសចាក់​សោ​អេក្រង់​ត្រូវបាន​បិទ។ ដើម្បីស្វែងយល់បន្ថែម សូមទាក់ទងអ្នកគ្រប់គ្រងរបស់​សា្ថប័នអ្នក។ "<annotation id="admin_details">"ព័ត៌មានលម្អិតបន្ថែម"</annotation>\n\n"អ្នកនៅតែអាចប្រើស្នាមម្រាមដៃ ដើម្បីផ្តល់សិទ្ធិលើការទិញ និងការចូលប្រើប្រាស់កម្មវីធីបានដដែល។ "<annotation id="url">"ស្វែងយល់បន្ថែម"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"លើកម្រាមដៃ ហើយបន្ទាប់មកប៉ះឧបករណ៍ចាប់សញ្ញាម្តងទៀត"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"មិនអាចប្រើ​ឧបករណ៍ចាប់ស្នាមម្រាមដៃ​បានទេ។ សូមទាក់ទង​ក្រុមហ៊ុនផ្ដល់​ការជួសជុល"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"ការកំណត់​កម្រិតខ្ពស់"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"ការចាក់សោកម្រងព័ត៌មានការងារ, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock និងអ្វីៗជាច្រើនទៀត"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"ការកំណត់​កម្រិតខ្ពស់"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"អ្នកអាចបន្ថែមស្នាមម្រាមដៃរហូតដល់ <xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"អ្នក​បាន​បញ្ចូល​ស្នាម​ម្រាមដៃ​ដល់​ចំនួន​អតិបរមា​ហើយ"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"មិន​អាច​បញ្ចូល​ស្នាម​ម្រាមដៃ​បាន​ទៀត​ទេ"</string>
@@ -2405,12 +2410,12 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"កម្រិតថ្លាពេលមិនកំពុងប្រើប្រាស់"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"ថ្លា"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"មិនថ្លា"</string>
-    <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"អត្ថបទ​​កម្រិត​ពណ៌​ខ្ពស់"</string>
+    <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"អក្សរពន្លឺបញ្ច្រាស​​កម្រិត​​ខ្ពស់"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"ប្ដូរពណ៌អក្សរទៅខ្មៅ ឬស។ បង្កើនពន្លឺបញ្ច្រាសក្នុងកម្រិតខ្ពស់បំផុតដោយប្រើផ្ទៃខាងក្រោយ។"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"ធ្វើ​បច្ចុប្បន្នភាព​ការ​ពង្រីក​អេក្រង់​ស្វ័យប្រវត្តិ"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"ធ្វើ​បច្ចុប្បន្ន​ភាព​ការ​ពង្រីក​អេក្រង់​ពេល​មាន​ដំណើរ​ផ្លាស់​ប្ដូរ​កម្មវិធី"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"ប៊ូតុងថាមពល​បញ្ចប់​ការ​ហៅ"</string>
-    <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"ព្រួញកណ្តុរធំ"</string>
+    <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"ទស្សន៍ទ្រនិច​កណ្តុរធំ"</string>
     <string name="accessibility_toggle_large_pointer_icon_summary" msgid="1480527946039237705">"ធ្វើឱ្យកាន់តែងាយសម្គាល់ឃើញទស្សន៍ទ្រនិចកណ្ដុរ"</string>
     <string name="accessibility_disable_animations" msgid="2993529829457179058">"លុប​រូបភាព​មាន​ចលនា"</string>
     <string name="accessibility_disable_animations_summary" msgid="5828228669556554565">"កាត់បន្ថយចលនានៅលើអេក្រង់"</string>
@@ -4952,7 +4957,7 @@
     <string name="keywords_one_handed" msgid="969440592493034101">"លទ្ធភាពចុចដល់"</string>
     <string name="one_handed_mode_swipe_down_category" msgid="110178629274462484">"អូសចុះក្រោមទៅ"</string>
     <string name="one_handed_mode_use_shortcut_category" msgid="1414714099339147711">"ប្រើផ្លូវកាត់​ដើម្បី"</string>
-    <string name="one_handed_mode_intro_text" msgid="7921988617828924342">"ទាញពាក់កណ្ដាលខាងលើនៃអេក្រង់របស់អ្នកចុះក្រោម ដើម្បីឱ្យកាន់តែងាយស្រួលឈោងដល់ដោយប្រើដៃម្ខាង"</string>
+    <string name="one_handed_mode_intro_text" msgid="7921988617828924342">"អូសចុះក្រោមត្រង់ផ្នែកខាងលើពាក់កណ្ដាលនៃអេក្រង់របស់អ្នក ដើម្បីឱ្យកាន់តែងាយស្រួលឈោងដល់ដោយប្រើដៃម្ខាង"</string>
     <string name="one_handed_mode_footer_text" msgid="6336209800330679840">" "<b>"របៀបប្រើមុខងារប្រើដៃម្ខាង"</b>\n" • ត្រូវប្រាកដថាការរុករកដោយប្រើចលនាត្រូវបានជ្រើសរើសនៅក្នុងការកំណត់ការរុករកប្រព័ន្ធ\n • អូសចុះក្រោមទៅជិតគែមខាងក្រោមនៃអេក្រង់"</string>
     <string name="one_handed_action_pull_down_screen_title" msgid="9187194533815438150">"ទាញអេក្រង់ដើម្បីឱ្យអាចចុចបញ្ជាបាន"</string>
     <string name="one_handed_action_pull_down_screen_summary" msgid="7582432473450036628">"ផ្នែកខាងលើនៃអេក្រង់នឹងរំកិល ដើម្បីឱ្យមេដៃរបស់អ្នកអាចចុចបញ្ជាបាន។"</string>
@@ -5693,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"ការចូលប្រើទីតាំង"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"សម្រាប់កម្មវិធី និងសេវាកម្ម"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"សម្រាប់កម្មវិធី និងសេវាកម្ម។ ប្រសិនបើបិទការកំណត់នេះ ទិន្នន័យមីក្រូហ្វូននៅតែអាចត្រូវបានចែករំលែកដដែល នៅពេលអ្នកហៅទៅលេខសង្គ្រោះបន្ទាន់។"</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"ការកំណត់​ហ្គេម"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"បើក​ផ្លូវកាត់ផ្ទាំងគ្រប់គ្រងហ្គេម និងអ្វីៗជាច្រើនទៀត"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"មុន"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"បន្ទាប់"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"ការមើល​ពណ៌សាកល្បង"</string>
