--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"보안 상태"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"화면 잠금, 내 기기 찾기, 앱 보안"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"보안 및 개인 정보 보호"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"권한, 화면 잠금, 앱 보안"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"얼굴 추가 완료"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"얼굴 인식을 설정하려면 탭하세요."</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"얼굴 인식 잠금 해제"</string>
@@ -588,10 +589,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" 화면 잠금 옵션이 사용 중지되었습니다. 자세한 내용은 조직의 관리자에게 문의하세요. "<annotation id="admin_details">"세부사항"</annotation>\n\n"계속해서 지문을 사용하여 구매 및 앱 액세스를 승인할 수 있습니다. "<annotation id="url">"자세히 알아보기"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"손가락을 뗐다가 센서를 다시 터치하세요."</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"지문 센서를 사용할 수 없습니다. 수리업체에 방문하세요."</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"고급 설정"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"직장 프로필 잠금, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock 등"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"고급 설정"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"지문을 <xliff:g id="COUNT">%d</xliff:g>개까지 추가할 수 있습니다."</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"최대 개수의 지문을 추가했습니다."</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"지문을 추가할 수 없습니다."</string>
@@ -2330,7 +2335,7 @@
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"바로가기를 사용하여 확대"</string>
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"바로가기 및 세 번 탭으로 확대"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"<xliff:g id="SERVICE">%1$s</xliff:g> 정보"</string>
-    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"표시 크기 및 텍스트"</string>
+    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"디스플레이 크기 및 텍스트"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"텍스트 표시 방식 변경"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"제목: 열기구 디자인"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"보낸 사람: 병수"</string>
@@ -2436,7 +2441,7 @@
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"색상 반전"</string>
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"색상 반전 사용"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"색상 반전 바로가기"</string>
-    <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"색상 반전은 밝은 색상을 어두운 색상으로 바꿉니다. 어두운 화면을 밝게 바꾸기도 합니다."</string>
+    <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"색상 반전은 밝은 색상을 어두운 색상으로, 어두운 색상을 밝은 색상으로 바꿉니다."</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;주의사항&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; 미디어 및 이미지에서 색상이 바뀝니다.&lt;/li&gt; &lt;li&gt; 색상 반전은 모든 앱에 적용됩니다.&lt;/li&gt; &lt;li&gt; 어두운 배경을 표시하려면 어두운 테마를 대신 사용하면 됩니다.&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"자동 클릭(포인터 정지 시간)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"자동 클릭 정보(체류 시간)"</string>
@@ -2526,7 +2531,7 @@
     <string name="accessibility_shortcuts_settings_title" msgid="974740249671825145">"접근성 단축키"</string>
     <string name="enable_quick_setting" msgid="6648073323202243604">"빠른 설정에 표시"</string>
     <string name="daltonizer_mode_deuteranomaly_title" msgid="4210949400493358650">"빨간색과 초록색"</string>
-    <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"적녹색약"</string>
+    <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"빨간색과 초록색"</string>
     <string name="daltonizer_mode_tritanomaly_title" msgid="2278786218762602022">"파란색과 노란색"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"그레이 스케일"</string>
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"녹색약"</string>
@@ -4954,7 +4959,7 @@
     <string name="keywords_one_handed" msgid="969440592493034101">"한 손 사용 가능 여부"</string>
     <string name="one_handed_mode_swipe_down_category" msgid="110178629274462484">"아래로 스와이프"</string>
     <string name="one_handed_mode_use_shortcut_category" msgid="1414714099339147711">"단축키 사용"</string>
-    <string name="one_handed_mode_intro_text" msgid="7921988617828924342">"화면 위쪽 절반까지 창 크기를 줄이면 한 손으로 작업하기가 쉬워집니다."</string>
+    <string name="one_handed_mode_intro_text" msgid="7921988617828924342">"화면 위쪽 절반을 아래로 내리면 한 손으로 작업하기가 쉬워집니다."</string>
     <string name="one_handed_mode_footer_text" msgid="6336209800330679840">" "<b>"한 손 사용 모드를 사용하는 방법"</b>\n" • 시스템 탐색 설정에서 동작 탐색이 선택되었는지 확인합니다.\n • 화면의 하단 가장자리 근처에서 아래로 스와이프합니다."</string>
     <string name="one_handed_action_pull_down_screen_title" msgid="9187194533815438150">"엄지가 닿는 영역으로 화면 크기 조정"</string>
     <string name="one_handed_action_pull_down_screen_summary" msgid="7582432473450036628">"화면 상단이 엄지가 닿을 수 있는 영역으로 이동합니다."</string>
@@ -5695,8 +5700,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"위치 정보 액세스"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"앱 및 서비스의 경우"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"앱 및 서비스에 적용. 설정이 꺼져 있어도 긴급 전화번호로 전화를 걸 때 마이크 데이터가 공유될 수 있습니다."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"게임 설정"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"게임 대시보드 바로가기 사용 설정 등"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"이전"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"다음"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"색상 미리보기"</string>
