--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -345,7 +345,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Drošības statuss"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Ekrāna bloķēšana, pakalpojums “Atrast ierīci”, lietotņu drošība"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Drošība un konfidencialitāte"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Atļaujas, ekrāna bloķēšana, lietotņu drošība"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Seja pievienota"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Pieskarieties, lai iestatītu seju"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Autorizācija pēc sejas"</string>
@@ -590,10 +591,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Ekrāna bloķēšanas opcija ir atspējota. Lai uzzinātu vairāk, sazinieties ar organizācijas administratoru. "<annotation id="admin_details">"Plašāka informācija"</annotation>\n\n"Joprojām varat izmantot pirksta nospiedumu, lai atļautu pirkumus un piekļuvi lietotnēm. "<annotation id="url">"Uzziniet vairāk"</annotation>"."</string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Paceliet pirkstu un pēc tam vēlreiz pieskarieties sensoram."</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Nevar izmantot pirksta nospieduma sensoru. Sazinieties ar remonta pakalpojumu sniedzēju."</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Papildu iestatījumi"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Darba profila bloķēšana, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock un citas funkcijas"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Papildu iestatījumi"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Varat pievienot līdz <xliff:g id="COUNT">%d</xliff:g> pirkstu nospiedumiem."</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Jūs esat pievienojis maksimālo pirkstu nospiedumu skaitu."</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Nevar pievienot citus pirkstu nospiedumus."</string>
@@ -5782,8 +5787,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Piekļuve atrašanās vietai"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Lietotnēm un pakalpojumiem"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Lietotnēm un pakalpojumiem. Ja šis iestatījums ir izslēgts, mikrofona dati joprojām var tikt kopīgoti, kad zvanīsiet uz ārkārtas numuru."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Spēļu iestatījumi"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Ieslēdziet spēļu informācijas paneļa saīsni un citas funkcijas"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Iepriekšējā"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Nākamā"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Krāsas priekšskatījums"</string>
