--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"ਸੁਰੱਖਿਆ ਸਥਿਤੀ"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"ਸਕ੍ਰੀਨ ਲਾਕ, Find My Device, ਐਪ ਸੁਰੱਖਿਆ"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"ਸੁਰੱਖਿਆ ਅਤੇ ਪਰਦੇਦਾਰੀ"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"ਇਜਾਜ਼ਤਾਂ, ਸਕ੍ਰੀਨ ਲਾਕ, ਐਪ ਸੁਰੱਖਿਆ"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"ਚਿਹਰਾ ਸ਼ਾਮਲ ਕੀਤਾ ਗਿਆ"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"ਫ਼ੇਸ ਅਣਲਾਕ ਦਾ ਸੈੱਟਅੱਪ ਕਰਨ ਲਈ ਟੈਪ ਕਰੋ"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"ਫ਼ੇਸ ਅਣਲਾਕ"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" ਸਕ੍ਰੀਨ ਲਾਕ ਵਿਕਲਪ ਨੂੰ ਅਯੋਗ ਬਣਾਇਆ ਗਿਆ ਹੈ। ਹੋਰ ਜਾਣਕਾਰੀ ਲਈ, ਆਪਣੀ ਸੰਸਥਾ ਦੇ ਪ੍ਰਸ਼ਾਸਕ ਨਾਲ ਸੰਪਰਕ ਕਰੋ। "<annotation id="admin_details">"ਹੋਰ ਵੇਰਵੇ"</annotation>\n\n"ਤੁਸੀਂ ਖਰੀਦਾਂ ਨੂੰ ਅਧਿਕਾਰਿਤ ਕਰਨ ਅਤੇ ਐਪ \'ਤੇ ਪਹੁੰਚ ਕਰਨ ਲਈ ਹਾਲੇ ਵੀ ਆਪਣੇ ਫਿੰਗਰਪ੍ਰਿੰਟ ਦੀ ਵਰਤੋਂ ਕਰ ਸਕਦੇ ਹੋ। "<annotation id="url">"ਹੋਰ ਜਾਣੋ"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"ਉਂਗਲ ਚੁੱਕੋ, ਫਿਰ ਦੁਬਾਰਾ ਸੈਂਸਰ ਨੂੰ ਸਪਰਸ਼ ਕਰੋ"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"ਫਿੰਗਰਪ੍ਰਿੰਟ ਸੈਂਸਰ ਦੀ ਵਰਤੋਂ ਨਹੀਂ ਕੀਤੀ ਜਾ ਸਕਦੀ। ਮੁਰੰਮਤ ਪ੍ਰਦਾਨਕ \'ਤੇ ਜਾਓ"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"ਅਡਵਾਂਸ ਸੈਟਿੰਗਾਂ"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"ਕਾਰਜ ਪ੍ਰੋਫਾਈਲ ਲਾਕ, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock ਅਤੇ ਹੋਰ"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"ਅਡਵਾਂਸ ਸੈਟਿੰਗਾਂ"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"ਤੁਸੀਂ <xliff:g id="COUNT">%d</xliff:g> ਤੱਕ ਫਿੰਗਰਪ੍ਰਿੰਟ ਸ਼ਾਮਲ ਕਰ ਸਕਦੇ ਹੋ"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"ਤੁਸੀਂ ਫਿੰਗਰਪ੍ਰਿੰਟਾਂ ਦੀ ਅਧਿਕਤਮ ਸੰਖਿਆ ਨੂੰ ਸ਼ਾਮਲ ਕੀਤਾ ਹੋਇਆ ਹੈ"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"ਹੋਰ ਫਿੰਗਰਪ੍ਰਿੰਟਾਂ ਨੂੰ ਸ਼ਾਮਲ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ"</string>
@@ -2278,7 +2283,7 @@
     <string name="accessibility_settings_title" msgid="6739115703615065716">"ਪਹੁੰਚਯੋਗਤਾ ਸੈਟਿੰਗਾਂ"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"ਡਿਸਪਲੇ, ਅੰਤਰਕਿਰਿਆ, ਆਡੀਓ"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"ਨਜ਼ਰ ਸੰਬੰਧੀ ਸੈਟਿੰਗਾਂ"</string>
-    <string name="vision_settings_description" msgid="7614894785054441991">"ਤੁਸੀਂ ਇਸ ਡੀਵਾਈਸ ਨੂੰ ਆਪਣੀਆਂ ਲੋੜਾਂ ਦੇ ਅਨੁਸਾਰ ਵਿਉਂਤਬੱਧ ਕਰ ਸਕਦੇ ਹੋ। ਇਹਨਾਂ ਪਹੁੰਚਯੋਗਤਾ ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ ਨੂੰ ਬਾਅਦ ਵਿੱਚ ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਜਾ ਕੇ ਬਦਲਿਆ ਜਾ ਸਕਦਾ ਹੈ।"</string>
+    <string name="vision_settings_description" msgid="7614894785054441991">"ਤੁਸੀਂ ਇਸ ਡੀਵਾਈਸ ਨੂੰ ਆਪਣੀਆਂ ਲੋੜਾਂ ਮੁਤਾਬਕ ਵਿਉਂਤਬੱਧ ਕਰ ਸਕਦੇ ਹੋ। ਇਨ੍ਹਾਂ ਪਹੁੰਚਯੋਗਤਾ ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ ਨੂੰ ਬਾਅਦ ਵਿੱਚ ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਜਾ ਕੇ ਬਦਲਿਆ ਜਾ ਸਕਦਾ ਹੈ।"</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"ਫੌਂਟ ਦਾ ਆਕਾਰ ਬਦਲੋ"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"ਸਕ੍ਰੀਨ ਰੀਡਰ"</string>
     <string name="captions_category_title" msgid="574490148949400274">"ਸੁਰਖੀਆਂ"</string>
@@ -2295,7 +2300,7 @@
     <string name="feature_flags_dashboard_title" msgid="348990373716658289">"ਵਿਸ਼ੇਸ਼ਤਾ ਵਾਲੇ ਫਲੈਗ"</string>
     <string name="talkback_title" msgid="8756080454514251327">"Talkback"</string>
     <string name="talkback_summary" msgid="5820927220378864281">"ਸਕ੍ਰੀਨ ਰੀਡਰ ਮੁੱਖ ਤੌਰ \'ਤੇ ਨੇਤਰਹੀਣਾਂ ਅਤੇ ਘੱਟ ਨਜ਼ਰ ਵਾਲੇ ਲੋਕਾਂ ਲਈ ਹੈ"</string>
-    <string name="select_to_speak_summary" msgid="1995285446766920925">"ਆਪਣੀ ਸਕ੍ਰੀਨ \'ਤੇ ਦਿੱਤੀਆਂ ਆਈਟਮਾਂ ਨੂੰ ਉੱਚੀ ਅਵਾਜ਼ ਵਿੱਚ ਸੁਣਨ ਲਈ ਉਹਨਾਂ \'ਤੇ ਟੈਪ ਕਰੋ"</string>
+    <string name="select_to_speak_summary" msgid="1995285446766920925">"ਆਪਣੀ ਸਕ੍ਰੀਨ \'ਤੇ ਦਿੱਤੀਆਂ ਆਈਟਮਾਂ ਨੂੰ ਉੱਚੀ ਅਵਾਜ਼ ਵਿੱਚ ਸੁਣਨ ਲਈ ਉਨ੍ਹਾਂ \'ਤੇ ਟੈਪ ਕਰੋ"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"ਸੁਰਖੀ ਸੰਬੰਧੀ ਤਰਜੀਹਾਂ"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"ਸੁਰਖੀ ਸੰਬੰਧੀ ਤਰਜੀਹਾਂ ਬਾਰੇ"</string>
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"ਸੁਰਖੀ ਸੰਬੰਧੀ ਤਰਜੀਹਾਂ ਬਾਰੇ ਹੋਰ ਜਾਣੋ"</string>
@@ -2331,7 +2336,7 @@
     <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"ਡਿਸਪਲੇ ਦਾ ਆਕਾਰ ਅਤੇ ਲਿਖਤ"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"ਲਿਖਤ ਦੇ ਦਿਸਣ ਦਾ ਤਰੀਕਾ ਬਦਲੋ"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"ਵਿਸ਼ਾ: ਗਰਮ ਹਵਾ ਦੇ ਗੁਬਾਰੇ ਦੇ ਡਿਜ਼ਾਈਨ"</string>
-    <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"ਭੇਜਣਵਾਲਾ: ਬਿੱਲ"</string>
+    <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"ਵੱਲੋਂ: ਬਿੱਲ"</string>
     <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"ਸਤਿ ਸ੍ਰੀ ਅਕਾਲ!\n\nਮੇਰੀ ਸਿਰਫ਼ ਇਹ ਜਾਣਨ ਦੀ ਇੱਛਾ ਹੈ ਕਿ ਡਿਜ਼ਾਈਨ ਦਾ ਕੰਮ ਕਿੰਨਾ ਕੁ ਹੋ ਗਿਆ ਹੈ। ਕੀ ਸਾਡੇ ਵੱਲੋਂ ਨਵੇਂ ਗੁਬਾਰੇ ਬਣਾਉਣਾ ਸ਼ੁਰੂ ਕੀਤੇ ਜਾਣ ਤੋਂ ਪਹਿਲਾਂ ਉਹ ਤਿਆਰ ਹੋ ਜਾਣਗੇ?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"ਸੈਟਿੰਗਾਂ ਰੀਸੈੱਟ ਕਰੋ"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"ਕੀ ਡਿਸਪਲੇ ਦੇ ਆਕਾਰ ਅਤੇ ਲਿਖਤ ਨੂੰ ਰੀਸੈੱਟ ਕਰਨਾ ਹੈ?"</string>
@@ -2411,7 +2416,7 @@
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"ਐਪ ਟ੍ਰਾਂਜਿਸ਼ਨਾਂ ਤੇ ਸਕ੍ਰੀਨ ਵਿਸਤਰੀਕਰਨ ਅੱਪਡੇਟ ਕਰੋ"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"ਪਾਵਰ ਬਟਨ ਨਾਲ ਕਾਲ ਕੱਟਣਾ"</string>
     <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"ਵੱਡਾ ਮਾਊਸ ਪੁਆਇੰਟਰ"</string>
-    <string name="accessibility_toggle_large_pointer_icon_summary" msgid="1480527946039237705">"ਮਾਊਸ ਪੁਆਇੰਟਰ ਨੂੰ ਹੋਰ ਧਿਆਨ ਦੇਣਯੋਗ ਬਣਾਓ"</string>
+    <string name="accessibility_toggle_large_pointer_icon_summary" msgid="1480527946039237705">"ਮਾਊਸ ਪੁਆਇੰਟਰ ਨੂੰ ਹੋਰ ਆਕਰਸ਼ਕ ਬਣਾਓ"</string>
     <string name="accessibility_disable_animations" msgid="2993529829457179058">"ਐਨੀਮੇਸ਼ਨਾਂ ਹਟਾਓ"</string>
     <string name="accessibility_disable_animations_summary" msgid="5828228669556554565">"ਸਕ੍ਰੀਨ \'ਤੇ ਹਿਲਜੁਲ ਨੂੰ ਘਟਾਓ"</string>
     <string name="accessibility_toggle_primary_mono_title" msgid="7587152099472946571">"ਮੋਨੋ ਆਡੀਓ"</string>
@@ -5693,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"ਟਿਕਾਣਾ ਪਹੁੰਚ"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"ਐਪਾਂ ਅਤੇ ਸੇਵਾਵਾਂ ਲਈ"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"ਐਪਾਂ ਅਤੇ ਸੇਵਾਵਾਂ ਲਈ। ਇਸ ਸੈਟਿੰਗ ਦੇ ਬੰਦ ਹੋਣ \'ਤੇ, ਜਦੋਂ ਤੁਸੀਂ ਕਿਸੇ ਐਮਰਜੈਂਸੀ ਨੰਬਰ \'ਤੇ ਕਾਲ ਕਰਦੇ ਹੋ ਤਾਂ ਮਾਈਕ੍ਰੋਫ਼ੋਨ ਡਾਟੇ ਨੂੰ ਫਿਰ ਵੀ ਸਾਂਝਾ ਕੀਤਾ ਜਾ ਸਕਦਾ ਹੈ।"</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"ਗੇਮ ਸੈਟਿੰਗਾਂ"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"ਗੇਮ ਡੈਸ਼ਬੋਰਡ ਸ਼ਾਰਟਕੱਟ ਅਤੇ ਹੋਰ ਚੀਜ਼ਾਂ ਨੂੰ ਚਾਲੂ ਕਰੋ"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"ਪਿੱਛੇ"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"ਅੱਗੇ"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"ਰੰਗ ਦੀ ਪੂਰਵ-ਝਲਕ"</string>
