--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -348,7 +348,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Stanje varnosti"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Zaklepanje zaslona, Poišči mojo napravo, varnost aplikacij"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Varnost in zasebnost"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Dovoljenja, zaklepanje zaslona, varnost aplikacij"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Obraz je dodan"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Za nastavitev obraza se dotaknite."</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Odklepanje z obrazom"</string>
@@ -596,10 +597,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Možnost zaklepanja zaslona je onemogočena. Če želite izvedeti več, se obrnite na skrbnika organizacije. "<annotation id="admin_details">"Več podrobnosti"</annotation>\n\n"Prstni odtis lahko še naprej uporabljate za potrjevanje nakupov in dostop do aplikacij. "<annotation id="url">"Več o tem"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Dvignite prst in se znova dotaknite tipala."</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Tipala prstnih odtisov ni mogoče uporabiti. Obiščite ponudnika popravil."</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Dodatne nastavitve"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Zaklepanje delovnega profila, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock in drugo"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Dodatne nastavitve"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Dodate lahko do toliko prstnih odtisov: <xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Dodali ste največje dovoljeno število prstnih odtisov"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Prstnih odtisov ni več mogoče dodati"</string>
@@ -4335,7 +4340,7 @@
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"Dogodki"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Aplikacijam dovoli preglasitev"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Aplikacije, ki lahko preglasijo"</string>
-    <string name="zen_mode_bypassing_apps_add_header" msgid="3201829605075172536">"Izberi več aplikacij"</string>
+    <string name="zen_mode_bypassing_apps_add_header" msgid="3201829605075172536">"Izberite več aplikacij"</string>
     <string name="zen_mode_bypassing_apps_none" msgid="7944221631721778096">"Ni izbranih aplikacij"</string>
     <string name="zen_mode_bypassing_apps_subtext_none" msgid="5128770411598722200">"Nobena aplikacija ne sme preglasiti"</string>
     <string name="zen_mode_bypassing_apps_add" msgid="5031919618521327102">"Dodajte aplikacije"</string>
@@ -5873,8 +5878,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Dostop do lokacije"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Za aplikacije in storitve"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Za aplikacije in storitve. Če je ta nastavitev izklopljena, bodo podatki mikrofona morda še vedno deljeni, ko pokličete številko za klic v sili."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Nastavitve iger"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Vklop bližnjice na nadzorni plošči igre in drugo"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Nazaj"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Naprej"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Predogled barve"</string>
