--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Säkerhetsstatus"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Skärmlås, Hitta min enhet, appsäkerhet"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Säkerhet och integritet"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Behörigheter, skärmlås, appsäkerhet"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Ansikte har lagts till"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Tryck för att konfigurera ansiktslås"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Ansiktslås"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Alternativet för skärmlås har inaktiverats. Kontakta organisationens administratör om du vill veta mer. "<annotation id="admin_details">"Mer information"</annotation>\n\n"Du kan fortfarande auktorisera köp och appåtkomst med fingeravtrycket. "<annotation id="url">"Läs mer"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Lyft fingret och tryck sedan på sensorn igen"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Det går inte att använda fingeravtryckssensorn. Besök ett reparationsställe"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Avancerade inställningar"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Lås för jobbprofilen, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock med mera"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Avancerade inställningar"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Du kan lägga till upp till <xliff:g id="COUNT">%d</xliff:g> fingeravtryck"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Du har lagt till det högsta tillåtna antalet fingeravtryck"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Det går inte att lägga till fler fingeravtryck"</string>
@@ -5693,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Platsåtkomst"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"För appar och tjänster"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"För appar och tjänster. Om inställningen är inaktiverad kan mikrofondata fortfarande delas när du ringer ett nödnummer."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Spelinställningar"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Aktivera genväg i Spelöversikt med mera"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Föregående"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Nästa"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Förhandsgranska färger"</string>
