--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -53,7 +53,7 @@
     <string name="font_size_make_smaller_desc" msgid="4978038055549590140">"Küçült"</string>
     <string name="font_size_make_larger_desc" msgid="5583046033381722247">"Büyüt"</string>
     <string name="auto_rotate_settings_primary_switch_title" msgid="3151963020165952847">"Otomatik döndürmeyi kullan"</string>
-    <string name="smart_rotate_text_headline" msgid="436277795183609578">"Yüz Algılama işlevi, Otomatik Döndürme doğruluğunu iyileştirmek için ön kamerayı kullanır. Resimler hiçbir zaman saklanmaz veya Google\'a gönderilmez."</string>
+    <string name="smart_rotate_text_headline" msgid="436277795183609578">"Yüz Algılama işlevi, otomatik döndürme doğruluğunu iyileştirmek için ön kamerayı kullanır. Görüntüler hiçbir zaman saklanmaz veya Google\'a gönderilmez."</string>
     <string name="font_size_preview_text_headline" msgid="1173103737980511652">"Örnek metin"</string>
     <string name="font_size_preview_text_title" msgid="6363561029914452382">"Muhteşem Oz Büyücüsü"</string>
     <string name="font_size_preview_text_subtitle" msgid="5806349524325544614">"11. Bölüm: Oz\'un Muhteşem Zümrüt Kenti"</string>
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Güvenlik durumu"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Ekran kilidi, Cihazımı Bul, uygulama güvenliği"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Güvenlik ve gizlilik"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"İzinler, ekran kilidi, uygulama güvenliği"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Yüz eklendi"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Yüz tanımayı kurmak için dokunun"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Yüz Tanıma Kilidi"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Ekran kilidi seçeneği devre dışı bırakıldı. Daha fazla bilgi için kuruluşunuzdaki yöneticiyle iletişime geçin. "<annotation id="admin_details">"Daha fazla ayrıntı"</annotation>\n\n"Satın alma işlemlerini ve uygulama erişimini yetkilendirmek için parmak izinizi kullanmaya devam edebilirsiniz. "<annotation id="url">"Daha fazla bilgi"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Parmağınızı kaldırın ve sensöre tekrar dokunun"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Parmak izi sensörü kullanılamıyor. Bir onarım hizmeti sağlayıcıyı ziyaret edin"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Gelişmiş ayarlar"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"İş profili kilidi, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock ve diğer ayarlar"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Gelişmiş ayarlar"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"<xliff:g id="COUNT">%d</xliff:g> adede kadar parmak izi ekleyebilirsiniz"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Maksimum sayıda parmak izi eklediniz"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Daha fazla parmak izi eklenemez"</string>
@@ -1423,7 +1428,7 @@
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"Ana ekran, kilit ekranı"</string>
     <string name="wallpaper_settings_summary_default" msgid="7569803705735001813">"Varsayılan"</string>
     <string name="wallpaper_settings_summary_custom" msgid="3174561317688848729">"Özel"</string>
-    <string name="wallpaper_suggestion_title" msgid="3812842717939877330">"Duvar kağıdını değiştir"</string>
+    <string name="wallpaper_suggestion_title" msgid="3812842717939877330">"Duvar kağıdını değiştirin"</string>
     <string name="wallpaper_suggestion_summary" msgid="9077061486716754784">"Ekranınızı kişiselleştirin"</string>
     <string name="wallpaper_settings_fragment_title" msgid="8445963841717633149">"Şuradan duvar kağıdı seçin:"</string>
     <string name="style_suggestion_title" msgid="1213747484782364775">"Telefonunuzu özelleştirme"</string>
@@ -2334,8 +2339,8 @@
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Gönderen: Ahmet"</string>
     <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Günaydın.\n\nTasarımlar nasıl gidiyor diye sormak istedim. Yeni balonları üretmeye başlamadan önce hazır olurlar mı?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Ayarları sıfırla"</string>
-    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Ekran boyutu ve metin sıfırlansın mı?"</string>
-    <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Ekran boyutunuz ve metin tercihleriniz telefonun orijinal ayarlarına sıfırlanacak"</string>
+    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Görüntü boyutu ve metin tercihleriniz sıfırlansın mı?"</string>
+    <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Görüntü boyutu ve metin tercihleriniz telefonun orijinal ayarlarına sıfırlanacak."</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Sıfırla"</string>
     <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"Hafta sonuna planın var mı?"</string>
     <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"Sahile gideceğim. Gelmek ister misin?"</string>
@@ -2413,7 +2418,7 @@
     <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"Geniş fare işaretçisi"</string>
     <string name="accessibility_toggle_large_pointer_icon_summary" msgid="1480527946039237705">"Fare işaretçisini daha belirgin hale getirir"</string>
     <string name="accessibility_disable_animations" msgid="2993529829457179058">"Animasyonları kaldır"</string>
-    <string name="accessibility_disable_animations_summary" msgid="5828228669556554565">"Ekrandaki hareketliliği azaltın"</string>
+    <string name="accessibility_disable_animations_summary" msgid="5828228669556554565">"Ekrandaki hareketliliği azaltır"</string>
     <string name="accessibility_toggle_primary_mono_title" msgid="7587152099472946571">"Mono ses"</string>
     <string name="accessibility_toggle_primary_mono_summary" msgid="1935283927319407303">"Ses çalınırken kanalları birleştir"</string>
     <string name="accessibility_toggle_primary_balance_title" msgid="7332275200153366714">"Ses dengesi"</string>
@@ -2458,7 +2463,7 @@
     <string name="accessibility_call_vibration_category_title" msgid="2545607568768192318">"Aramalar"</string>
     <string name="accessibility_notification_alarm_vibration_category_title" msgid="2683635252414849417">"Bildirimler ve alarmlar"</string>
     <string name="accessibility_interactive_haptics_category_title" msgid="3162855291184592021">"Etkileşimli geri bildirim teknolojisi"</string>
-    <string name="accessibility_vibration_primary_switch_title" msgid="6162579254864450592">"Titreşimi ve dokunma teknolojisini kullanma"</string>
+    <string name="accessibility_vibration_primary_switch_title" msgid="6162579254864450592">"Titreşimi ve dokunma teknolojisini kullan"</string>
     <string name="accessibility_alarm_vibration_title" msgid="4661294337828522745">"Alarm titreşimi"</string>
     <string name="accessibility_media_vibration_title" msgid="1372073715403945428">"Medya titreşimi"</string>
     <string name="accessibility_ring_vibration_title" msgid="4689811297654320885">"Zili çaldırma titreşimi"</string>
@@ -5693,8 +5698,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Konum erişimi"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Uygulamalar ve hizmetler için"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Uygulamalar ve hizmetler için. Bu ayar kapalıyken bir acil durum numarasını aradığınızda mikrofon verileri paylaşılmaya devam edebilir."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Oyun ayarları"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Oyun Paneli kısayolunu açın ve daha fazlasını yapın"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Önceki"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Sonraki"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Renk önizleme"</string>
