--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -342,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Isimo sokuphepha"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Ukukhiya isikrini, Thola idivayisi yami, ukuphepha kwe-app"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Ukuphepha nobumfihlo"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Izimvume, ukukhiya isikrini, ukuvikelwa kwe-app"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Ubuso bungeziwe"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Thepha ukuze usethe ubuso"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Ukuvula ubuso"</string>
@@ -586,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Inketho yokukhiywa kwesikrini ikhutshaziwe. Ukuze ufunde kabanzi, xhumana nolawuli wakho wenhlangano. "<annotation id="admin_details">"Imininingwane engeziwe"</annotation>\n\n"Ungasasebenzisa izigxivizo zeminwe zakho ukugunyaza ukuthenga nokufinyelela kwezinhlelo zokusebenza. "<annotation id="url">"Funda kabanzi"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Phakamisa umunwe, bese uphinda uthinta inzwa"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Ayikwazi ukusebenzisa inzwa yesigxivizo somunwe. Vakashela umhlinzeki wokulungisa"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Amasethingi athuthukisiwe"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Ukhiye wephrofayela yomsebenzi, Ukhiye oSmathi"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Ukhiye oSmathi nokuningi"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Amasethingi athuthukisiwe"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Ungangeza izigxivizo zeminwe ezingafika kwezingu-<xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Ungeze inombolo ephezulu yezigxivizo zeminwe"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Ayikwazi ukwengeza izingxovizo zeminwe eziningi"</string>
@@ -5694,8 +5699,6 @@
     <string name="location_toggle_title" msgid="5229867700421750868">"Ukufinyelela kwendawo"</string>
     <string name="perm_toggle_description" msgid="5754629581767319022">"Okwama-app namasevisi"</string>
     <string name="mic_toggle_description" msgid="484139688645092237">"Okwama-app namasevisi. Uma leli sethingi livaliwe, idatha yemakrofoni ingabiwa uma ushayela inombolo yezimo eziphuthumayo."</string>
-    <string name="game_settings_title" msgid="1028178627743422090">"Amasethingi egeyimu"</string>
-    <string name="game_settings_summary" msgid="8623110986485071064">"Vula Isinqamuleli Sedeshibhodi Yegeyimu, nokuningi"</string>
     <string name="previous_page_content_description" msgid="6438292457923282991">"Okwangaphambilini"</string>
     <string name="next_page_content_description" msgid="1641835099813416294">"Okulandelayo"</string>
     <string name="colors_viewpager_content_description" msgid="2591751086138259565">"Ukubuka kuqala umbala"</string>
